fix: configuration for BufferResourceTest