@@ -40,14 +40,13 @@ public class BufferResourceTest {
         GraphHopperServerConfiguration config = new GraphHopperServerTestConfiguration();
         config.getGraphHopperConfiguration()
                 .putObject("datareader.file", "../core/files/andorra.osm.pbf")
-                .putObject("graph.location", DIR)
                 .putObject("import.osm.ignored_highways", "")
+                .putObject("graph.location", DIR)
                 .putObject("graph.encoded_values", "car_access, car_average_speed")
-                .setProfiles(List.of(
-                        TestProfiles.accessAndSpeed("fast_car", "car").setWeighting("fastest").setTurnCostsConfig(TurnCostsConfig.car()),
-                        TestProfiles.accessAndSpeed("short_car", "car").setWeighting("shortest").setTurnCostsConfig(TurnCostsConfig.car()),
-                        TestProfiles.accessAndSpeed("fast_car_no_turn_restrictions", "car").setWeighting("shortest")
-                ));
+                .setProfiles(Arrays.asList(
+                        TestProfiles.accessAndSpeed("fast_car", "car").setTurnCostsConfig(TurnCostsConfig.car()),
+                        TestProfiles.constantSpeed("short_car", 35).setTurnCostsConfig(TurnCostsConfig.car()),
+                        TestProfiles.accessAndSpeed("fast_car_no_turn_restrictions", "car")));
         return config;
     }
 
@@ -74,7 +73,8 @@ public class BufferResourceTest {
         assertEquals(lineString0.getCoordinates()[0], lineString1.getCoordinates()[0]);
 
         // Different end points
-        assertNotEquals(lineString0.getCoordinates()[lineString0.getCoordinates().length - 1], lineString1.getCoordinates()[lineString1.getCoordinates().length - 1]);
+        assertNotEquals(lineString0.getCoordinates()[lineString0.getCoordinates().length - 1],
+                lineString1.getCoordinates()[lineString1.getCoordinates().length - 1]);
     }
 
     @Test
@@ -93,7 +93,8 @@ public class BufferResourceTest {
         // Different start points
         assertNotEquals(lineString0.getCoordinates()[0], lineString1.getCoordinates()[0]);
         // Arbitrary - different endpoints
-        assertNotEquals(lineString0.getCoordinates()[lineString0.getCoordinates().length - 1], lineString1.getCoordinates()[lineString1.getCoordinates().length - 1]);
+        assertNotEquals(lineString0.getCoordinates()[lineString0.getCoordinates().length - 1],
+                lineString1.getCoordinates()[lineString1.getCoordinates().length - 1]);
     }
 
     @Test
@@ -130,19 +131,24 @@ public class BufferResourceTest {
         Geometry shortLineString0 = shortFeatureCollection.getFeatures().get(0).getGeometry();
         Geometry shortLineString1 = shortFeatureCollection.getFeatures().get(1).getGeometry();
 
-
         // Identical end points
         assertEquals(longLineString0.getCoordinates()[0], longLineString1.getCoordinates()[0]);
         assertEquals(longLineString0.getCoordinates()[0], shortLineString0.getCoordinates()[0]);
         assertEquals(longLineString0.getCoordinates()[0], shortLineString1.getCoordinates()[0]);
 
         // Different start points
-        assertNotEquals(longLineString0.getCoordinates()[longLineString0.getCoordinates().length - 1], longLineString1.getCoordinates()[longLineString1.getCoordinates().length - 1]);
-        assertNotEquals(longLineString0.getCoordinates()[longLineString0.getCoordinates().length - 1], shortLineString0.getCoordinates()[shortLineString0.getCoordinates().length - 1]);
-        assertNotEquals(longLineString0.getCoordinates()[longLineString0.getCoordinates().length - 1], shortLineString1.getCoordinates()[shortLineString1.getCoordinates().length - 1]);
-        assertNotEquals(longLineString1.getCoordinates()[longLineString1.getCoordinates().length - 1], shortLineString0.getCoordinates()[shortLineString0.getCoordinates().length - 1]);
-        assertNotEquals(longLineString1.getCoordinates()[longLineString1.getCoordinates().length - 1], shortLineString1.getCoordinates()[shortLineString1.getCoordinates().length - 1]);
-        assertNotEquals(shortLineString0.getCoordinates()[shortLineString0.getCoordinates().length - 1], shortLineString1.getCoordinates()[shortLineString1.getCoordinates().length - 1]);
+        assertNotEquals(longLineString0.getCoordinates()[longLineString0.getCoordinates().length - 1],
+                longLineString1.getCoordinates()[longLineString1.getCoordinates().length - 1]);
+        assertNotEquals(longLineString0.getCoordinates()[longLineString0.getCoordinates().length - 1],
+                shortLineString0.getCoordinates()[shortLineString0.getCoordinates().length - 1]);
+        assertNotEquals(longLineString0.getCoordinates()[longLineString0.getCoordinates().length - 1],
+                shortLineString1.getCoordinates()[shortLineString1.getCoordinates().length - 1]);
+        assertNotEquals(longLineString1.getCoordinates()[longLineString1.getCoordinates().length - 1],
+                shortLineString0.getCoordinates()[shortLineString0.getCoordinates().length - 1]);
+        assertNotEquals(longLineString1.getCoordinates()[longLineString1.getCoordinates().length - 1],
+                shortLineString1.getCoordinates()[shortLineString1.getCoordinates().length - 1]);
+        assertNotEquals(shortLineString0.getCoordinates()[shortLineString0.getCoordinates().length - 1],
+                shortLineString1.getCoordinates()[shortLineString1.getCoordinates().length - 1]);
     }
 
     @Test
@@ -177,7 +183,8 @@ public class BufferResourceTest {
         Geometry lineString1 = featureCollection.getFeatures().get(1).getGeometry();
 
         // Identical start points (reversed index)
-        assertEquals(lineString0.getCoordinates()[lineString0.getCoordinates().length - 1], lineString1.getCoordinates()[lineString1.getCoordinates().length - 1]);
+        assertEquals(lineString0.getCoordinates()[lineString0.getCoordinates().length - 1],
+                lineString1.getCoordinates()[lineString1.getCoordinates().length - 1]);
 
         // Different endpoints (reversed index)
         assertNotEquals(lineString0.getCoordinates()[0], lineString1.getCoordinates()[0]);
@@ -203,16 +210,22 @@ public class BufferResourceTest {
         Geometry downstreamLineString0 = downstreamFeatureCollection.getFeatures().get(0).getGeometry();
         Geometry downstreamLineString1 = downstreamFeatureCollection.getFeatures().get(1).getGeometry();
 
-        // Since bidirectional road has an arbitrary flow, downstream-start and upstream-end should match
-        assertEquals(upstreamLineString1.getCoordinates()[upstreamLineString1.getCoordinates().length - 1], downstreamLineString1.getCoordinates()[0]);
-        assertEquals(upstreamLineString0.getCoordinates()[upstreamLineString0.getCoordinates().length - 1], downstreamLineString0.getCoordinates()[0]);
+        // Since bidirectional road has an arbitrary flow, downstream-start and
+        // upstream-end should match
+        assertEquals(upstreamLineString1.getCoordinates()[upstreamLineString1.getCoordinates().length - 1],
+                downstreamLineString1.getCoordinates()[0]);
+        assertEquals(upstreamLineString0.getCoordinates()[upstreamLineString0.getCoordinates().length - 1],
+                downstreamLineString0.getCoordinates()[0]);
 
         // And downstream-end and upstream-start should match
-        assertEquals(upstreamLineString0.getCoordinates()[0], downstreamLineString0.getCoordinates()[downstreamLineString0.getCoordinates().length - 1]);
-        assertEquals(upstreamLineString1.getCoordinates()[0], downstreamLineString1.getCoordinates()[downstreamLineString1.getCoordinates().length - 1]);
+        assertEquals(upstreamLineString0.getCoordinates()[0],
+                downstreamLineString0.getCoordinates()[downstreamLineString0.getCoordinates().length - 1]);
+        assertEquals(upstreamLineString1.getCoordinates()[0],
+                downstreamLineString1.getCoordinates()[downstreamLineString1.getCoordinates().length - 1]);
 
         // And origin points should match internally
-        assertEquals(upstreamLineString0.getCoordinates()[upstreamLineString0.getCoordinates().length - 1], upstreamLineString1.getCoordinates()[upstreamLineString1.getCoordinates().length - 1]);
+        assertEquals(upstreamLineString0.getCoordinates()[upstreamLineString0.getCoordinates().length - 1],
+                upstreamLineString1.getCoordinates()[upstreamLineString1.getCoordinates().length - 1]);
         assertEquals(downstreamLineString0.getCoordinates()[0], downstreamLineString1.getCoordinates()[0]);
     }
 
@@ -237,12 +250,16 @@ public class BufferResourceTest {
         Geometry downstreamLineString1 = downstreamFeatureCollection.getFeatures().get(1).getGeometry();
 
         // Identical start points despite reversed direction
-        assertEquals(upstreamLineString0.getCoordinates()[upstreamLineString0.getCoordinates().length - 1], downstreamLineString0.getCoordinates()[0]);
-        assertEquals(upstreamLineString1.getCoordinates()[upstreamLineString1.getCoordinates().length - 1], downstreamLineString1.getCoordinates()[0]);
+        assertEquals(upstreamLineString0.getCoordinates()[upstreamLineString0.getCoordinates().length - 1],
+                downstreamLineString0.getCoordinates()[0]);
+        assertEquals(upstreamLineString1.getCoordinates()[upstreamLineString1.getCoordinates().length - 1],
+                downstreamLineString1.getCoordinates()[0]);
 
         // Different endpoints
-        assertNotEquals(upstreamLineString0.getCoordinates()[0], downstreamLineString0.getCoordinates()[downstreamLineString0.getCoordinates().length - 1]);
-        assertNotEquals(upstreamLineString1.getCoordinates()[0], downstreamLineString1.getCoordinates()[downstreamLineString1.getCoordinates().length - 1]);
+        assertNotEquals(upstreamLineString0.getCoordinates()[0],
+                downstreamLineString0.getCoordinates()[downstreamLineString0.getCoordinates().length - 1]);
+        assertNotEquals(upstreamLineString1.getCoordinates()[0],
+                downstreamLineString1.getCoordinates()[downstreamLineString1.getCoordinates().length - 1]);
     }
 
     @Test
@@ -262,7 +279,8 @@ public class BufferResourceTest {
         assertEquals(lineString0.getCoordinates()[0], lineString1.getCoordinates()[0]);
 
         // Different end points
-        assertNotEquals(lineString0.getCoordinates()[lineString0.getCoordinates().length - 1], lineString1.getCoordinates()[lineString1.getCoordinates().length - 1]);
+        assertNotEquals(lineString0.getCoordinates()[lineString0.getCoordinates().length - 1],
+                lineString1.getCoordinates()[lineString1.getCoordinates().length - 1]);
     }
 
     @Test
